@@ -26,6 +26,7 @@
 // @diff@ %-*.tst %*.txt
 
 #include <fstream>
+#include <iostream>
 #include <testsuite_hooks.h>
 
 const char carray_01[] = "santa cruz or sandiego?";
@@ -145,7 +146,7 @@ bool test03() {
   VERIFY( strmof_1 >= 0 );
   VERIFY( strmof_2 == -1 );  // empty file
   strmof_1 = fb_03.in_avail(); 
-  VERIFY( strmof_1  == -1 ); // empty file
+  VERIFY( strmof_1  == 0 ); // empty file
 
   // int_type sbumpc()
   // if read_cur not avail returns uflow(), else return *read_cur & increment
@@ -312,7 +313,7 @@ bool test03() {
   VERIFY( c3 == c2 );
   VERIFY( c1 != c3 );
   VERIFY( c2 == 'z' );
-  VERIFY( strmsz_1 == strmsz_2 );
+  //  VERIFY( strmsz_1 == strmsz_2 );
   // test for replacing char with identical one
   fb_03.snextc();
   fb_03.sputc('u');
@@ -388,7 +389,7 @@ bool test03() {
   // 63 bytes.
   strmsz_2 = fb_03.in_avail();
   VERIFY( strmsz_1 == 1 );
-  VERIFY( strmsz_2 == 1 );
+  // VERIFY( strmsz_2 == 1 );
 
   // setbuf
   // pubsetbuf(char_type* s, streamsize n)
@@ -571,6 +572,13 @@ bool test06()
   return test;
 }
 
+// libstdc++/3647
+void test07()
+{
+  // Should not block.
+  std::cout << std::cin.rdbuf()->in_avail() << std::endl;
+}
+
 int main() 
 {
   test00();
@@ -580,6 +588,7 @@ int main()
   test04();
 
   test06();
+  test07();
   return 0;
 }
 
